# haskellbook

./: .gitignore
ch02/: ch2.hs
ch03/: ch3_misc.hs  take.hs
ch04/: ch4.hs
ch05/: fns.hs  mono.hs
ch06/: ch6.hs  instance.hs
ch07/: ch7.hs  tuples.hs
ch08/: ch8.hs  wordnumber.hs
ch09/: ch9.hs  cipher.hs
ch10/: Database.hs  ch10.hs
ch11/: bintree.hs  ch11.hs  evil_records.hs  hutton.hs  newtype_typeclass.hs  phone.hs  vehicles.hs  vignere.hs
ch12/: bintree.hs  ch12.hs
ch13/: ch13.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/exe/: Main.hs
ch13/hello/src/: Dogs.hs  (+1 more)
ch14/addition/: Addition.hs  addition.cabal
ch14/morse/: morse.cabal
ch15/: monoid.hs  semigroup.hs
ch15/monoidQc/: README.md  monoidQc.cabal
ch15/orphans/: ListyInstances.hs
ch16/: ch16.hs  nat_trans.hs
ch16/functor-qc/: FunctorQc.hs  functor-qc.cabal
ch17/: ch17.hs
ch18/: ch18.hs
ch18/chekkers/: chekkers.cabal
ch20/: ch20.hs  my_foldable.hs
ch21/: ch21.hs  refactor.hs
ch21/wrecker/: README.md  wrecker.cabal
ch22/: ch22.hs  chars.hs
ch23/: fakestate.hs
ch23/stateExercises/: README.md  stateExercises.cabal
ch23/useRandom/: useRandom.cabal
ch24/LearnParsers/: LearnParsers.cabal  README.md
ch24/LearnParsers/app/: Main.hs
ch24/LearnParsers/src/: LearnParsers.hs
ch25/: BiFunctor.hs  Examples.hs  MonadTrans.hs
ch26/: EitherT.hs  MaybeT.hs  ReaderT.hs  StateT.hs
ch26/EndExercises/: EndExercises.cabal  README.md
ch26/HitCounter/: HitCounter.cabal  README.md
ch26/InsideOut/: InsideOut.cabal
ch26/LiftTrans/: LiftTrans.cabal  README.md
ch26/ScottyDemo/: README.md  ScottyDemo.cabal
ch27/: bangPats.hs  ch27.hs  coreEx.hs  strictMirrorUniverse.hs
ch28/: Queue.hs  profileMe.hs
ch28/DiffList/: DiffList.cabal  README.md
ch28/benchmark-bangbang/: README.md  benchmark-bangbang.cabal
ch28/benchmark-bangbang/src/: Main.hs
ch28/benchmark-structures/: README.md  benchmark-structures.cabal
ch28/benchmark-vectors/: README.md  benchmark-vectors.cabal
ch29/: mvarDeadlock.hs
ch29/vignere/: README.md  vignere.cabal
ch30/: AsyncExns.hs  CustomExns.hs  ch30.hs  existential.hs
ch31/: RWC.hs
ch31/fingerd/: fingerd.cabal
(+25 files in other folders)
