name:                benchmark-bangbang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/benchmark-bangbang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable benchmark-bangbang
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , criterion
